# nova

./: .env.example  .gitignore  .mise.toml  Cargo.toml  LICENSE  Makefile.toml  README.md  biome.json  justfile  justfile.old  leptosfmt.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  ui.config.json
.config/: default.nix
.recycle/experts/: Cargo.toml  README.md
.recycle/experts/src/: lib.rs
.recycle/experts/src/domain/entities/: mod.rs
.recycle/experts/src/domain/entities/expert/: mocks.rs  model.rs  service.rs
.recycle/experts/src/domain/entities/expert/gui/: experience.rs  headline.rs  position.rs  skillset.rs  summary.rs
.recycle/experts/src/screen/: __root.rs  _routes.rs  cv.rs
.recycle/framework/: Cargo.toml
.recycle/framework/src/common/_std/: Cargo.toml
.recycle/framework/src/common/_std/src/: config.rs  lib.rs  thing.rs
.recycle/framework/src/domain/: mod.rs
.recycle/framework/src/domain/entities/tile/: mod.rs
.recycle/framework/src/domain/entities/tile/ui/: frame.rs
.recycle/framework/src/domain/features/authentication/ui/: dialog.rs
.target/linux-unknown-unknown/etc/hsd/: hsd.conf
apps/overlay/: Cargo.toml  tauri.conf.json
apps/overlay/src/: main.rs
infrastructure/ml/transformers/tts/: pyproject.toml
services/avatar/: README.md  gleam.toml  manifest.toml
services/avatar/legacy/: lib.ts  main.ts
services/avatar/legacy/app/: mod.ts
services/avatar/legacy/common/: config.ts
services/avatar/src/: akaia_avatar.gleam
services/openai/: README.md  gleam.toml  manifest.toml
services/openai/src/: akaia_openai.gleam
services/overlay_web_leptos/: Cargo.toml
services/overlay_web_leptos/src/: app.rs  main.rs
services/overlay_web_leptos/src/app/: global.css
services/platform/: Cargo.toml  Makefile.toml
services/platform/public/: example.svelte  manifest.webmanifest  root.css
services/platform/public/fonts/: AkaiaAlpha.css
services/platform/src/: app.rs  lib.rs  main.rs
services/platform/src/app/: error.rs
services/platform/src/common/: config.rs
src/: app.rs  lib.rs  main.rs
src/app/: global.css  globals.css  index.rs  mod.rs  not_found.rs
src/app/applet_route/: mod.rs
src/app/desktop/: mod.rs
src/app/id/: mod.rs
src/app/screen_id/: mod.rs
src/app/widget_id/: mod.rs
src/applets/vault/screen/: demo.rs  mod.rs
src/common/: config.rs  mod.rs
src/common/repositories/: account.rs  mod.rs
src/common/repositories/account/: balance.rs
src/common/repositories/near/: mod.rs
src/common/repositories/near_account/: balance.rs  mod.rs
src/common/ui/: package.json  pnpm-lock.yaml  ui.config.json
src/common/ui/web_components/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge-delta.tsx  badge.tsx  button.tsx  callout.tsx  card.tsx  carousel.tsx  checkbox.tsx  combobox.tsx  command.tsx  context-menu.tsx  delta-bar.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  hover-card.tsx  input.tsx  label.tsx  menubar.tsx  (+20 more)
src/entities/: mod.rs
src/entities/app_shell/: mod.rs
system/cli/: Cargo.toml
system/cli/src/: main.rs
system/configuration/caddy/: Caddyfile
system/configuration/systemd/: nova.akaia.service
system/configuration/web-server/: Caddyfile
system/configuration/webserver/: Caddyfile
(+50 files in other folders)
