[workspace]
members = ["services/platform", "system/cli"]
resolver = "2"


[workspace.package]
authors = ["Carina.Akaia.io <cvo.akaia@gmail.com>"]
keywords = ["akaia", "os"]
license = "LGPL"


[workspace.dependencies]
# AKAIA packages
akaia-experts = { path = "packages/apps/experts" }
akaia-framework = { path = "packages/core/framework" }

# External packages

## Leptos
leptos = { version = "0.6", features = ["experimental-islands", "nightly"] }
leptos_axum = { version = "0.6" }
leptos_declarative = { version = "0.3" }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_query = { version = "0.5", features = ["hydrate", "indexed_db", "ssr"] }
leptos_router = { version = "0.6", features = ["nightly"] }
leptos-tracked = { version = "0.1" }
leptos-use = { version = "0.10" }
phosphor-leptos = { version = "0.3" }

## Other
async-std = "1.12"
aquamarine = "0.5"
axum = { version = "0.7" }
bincode = { version = "1.3" }
bytes = "1.0"
chrono = "0.4"
console_error_panic_hook = "0.1"
derive_more = "0.99"
dptree = "0.3"
futures = "0.3"
getargs = "0.5"
gloo = "0.11"
http = "1"
llm = { git = "https://github.com/rustformers/llm", branch = "main" }
log = "0.4"
mime = "0.3"
near-sdk = "5.0.0"
pin-project = "1.0"
pretty_env_logger = "0.5"
rand = { version = "0.8" }
regex = "1.10"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11" }
serde_json = "1.0"
serde_with_macros = "3.6"
sled = { version = "0.34" }
teloxide = { version = "0.12.2", features = ["macros", "bincode-serializer"] }
thiserror = "1"
tokio = { version = "1.8", features = ["fs", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = { version = "0.1" }
unocss-classes = { version = "2", features = ["runtime"] }
url = "2.4.1"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = "0.3"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
overflow-checks = true
